@@ -1,4 +1,5 @@
 5.0-alpha1
+ * Expose bootstrap failure state via JMX and nodetool info (CASSANDRA-18749)
  * Reduce size of per-SSTable index components for SAI (CASSANDRA-18673)
  * Remove unnecessary Netty dependencies after upgrade to version 4.1.96 (CASSANDRA-18729)
  * Prevent InaccessibleObjectException when the Leak Detector is traversing objects (CASSANDRA-18708)
